# simple_dyno_pub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: analyze_clutch.m  analyze_leg.m  clutch_test_1  clutch_test_2  clutch_test_3  clutch_test_4  clutch_test_5  gearmotor_test  gearmotor_test_1  gearmotor_test_10  gearmotor_test_11  gearmotor_test_12  gearmotor_test_13  gearmotor_test_14  gearmotor_test_15  gearmotor_test_16  gearmotor_test_17  gearmotor_test_18  gearmotor_test_19  gearmotor_test_2  gearmotor_test_20  gearmotor_test_21  gearmotor_test_22  gearmotor_test_23  gearmotor_test_24  gearmotor_test_25  gearmotor_test_26  gearmotor_test_27  gearmotor_test_28  gearmotor_test_29  gearmotor_test_3  gearmotor_test_30  gearmotor_test_31  gearmotor_test_4  gearmotor_test_5  gearmotor_test_6  gearmotor_test_7  gearmotor_test_8  gearmotor_test_9  get_spring_torque.m  (+5 more)
include/: global_utils.h  loop_timer.h  motor_utils.h  spin_clutch.h  spin_motor.h
include/hopper_lcm_msgs/: hopper_control_t.hpp  hopper_state_t.hpp
lcm_types/: hopper_control_t.lcm  hopper_state_t.lcm
old_data/: drive_log_vel0_t0.05.csv  drive_log_vel10_t0.05.csv  drive_log_vel3_t0.05.csv  drive_log_vel5_t0.05.csv  gearmotor_test_1  gearmotor_test_10  gearmotor_test_11  gearmotor_test_13  gearmotor_test_2  gearmotor_test_4  gearmotor_test_8  plot_simple_dyno.m
src/: global_utils.cpp  loop_timer.cpp  motor_utils.cpp  spin_clutch.cpp  spin_motor.cpp
